fix: adjust search container width to align with page contents (#1105)
* fix: adjust search container width to align with page contents closes #1101

* Update GlobalSearch.module.scss

--- a/packages/gatsby-theme-carbon/src/components/GlobalSearch/GlobalSearch.module.scss
+++ b/packages/gatsby-theme-carbon/src/components/GlobalSearch/GlobalSearch.module.scss
@@ -10,6 +10,10 @@
   color: $carbon--white-0;
   transition: max-width $duration--fast-02 $carbon--standard-easing,
     background $duration--fast-02 $carbon--standard-easing;
+  
+  @include carbon--breakpoint('lg') {
+    max-width: 28rem;
+  }
 }
 
 .container.inputFocusWithin {
